--- a/stylesheet.css
+++ b/stylesheet.css
@@ -65,7 +65,9 @@ dd {
     font-weight: lightest;
     font: Arial;
 }
-
+.mapboxgl-popup{
+    z-index:1;
+}
 .mapboxgl-popup-content {
     padding: 5px;
     width: fit-content;
@@ -248,6 +250,7 @@ option{
     padding:8px;
     color:black !important;
     font-size:150%;
+    font-family:Helvetica;
     text-align:justify;
 
 }
@@ -277,4 +280,11 @@ option{
   } */
   ::placeholder {
     font-size: 18px;
+  }
+  #company-logo{
+    text-align:center;
+    position:absolute;
+    bottom:60px;
+    left:10px;
+    width:90%
   }
